--- a/styles/css/style.css
+++ b/styles/css/style.css
@@ -16,6 +16,7 @@ body {
   min-height: 100vh;
   padding: 0.5rem;
   display: grid;
+  gap: 1rem;
   grid-template-columns: 0.25fr 1fr;
   background-color: #fdfdfd;
 }
@@ -99,3 +100,17 @@ span.nav-icon {
   margin-right: 1rem;
 }
 /* Main */
+main{
+    height: auto;
+    min-height: 100%;
+}
+section{
+    height: auto;
+    min-height: 100%;
+    padding: 1rem;
+    background-color: #e6e6e6;
+    display: none;
+}
+section.show{
+    display: block;
+}
