--- a/styles/css/style.css
+++ b/styles/css/style.css
@@ -253,6 +253,44 @@ text-decoration: none;
 text-align: center;
 border-radius: 0.5rem;
 }
+/* info section */
+section#info.show{
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 0.125fr 1fr;
+  gap: 0.5rem;
+}
+article.info-content{
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 1rem;
+  justify-content: center;
+  align-content: center;
+}
+div.info-details{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+h2.info-title{
+  flex: 0.25;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+div.info-desc{
+  flex: 1;
+  display: grid;
+  grid-template-columns: 1fr;
+  justify-content: center;
+  gap: 1.5rem;
+  align-content: center;
+}
+div.info-desc > p{
+  font-size: 1.125rem;
+  line-height: 2rem;
+  text-align: justify;
+}
 /* Fonts Reference */
 /* 
 
